<resources>
    <string name="app_name">易派克</string>
    <string name="toolbar_title_default_name">首页</string>

    <!--差异参数-->
    <string name="baidu_api_key">acQjw8XOIXifYG1PYfNqxs5Y0n22egBg</string>
    <string name="gaode_api_key">13acae4efeb2ca8add837d33d1a58b1d</string>
    <string name="wx_app_id"></string>
    <string name="wx_secret"></string>
    <string name="qq_app_id">101848173</string>
    <string name="qq_scheme">tencent101848173</string>
    <string name="qq_app_key">fd07124e89ff06bceb65e3200604de16</string>
    <string name="bugly_app_id">ddbb7ebc8c</string>
    <string name="bugly_app_key">69dd1c89-068d-4ce1-86dd-bfb8783c0026</string>

    <!--首页-->
    <string name="main_page_search_tip">请输入您的目的地</string>
    <string name="main_page_park_recommend">推荐</string>
    <string name="main_park_no_found_msg">亲！当前位置未找到合适停车位，努力扩大范围搜索中…\n建议您重新选择地点。</string>
    <string name="nearby_no_found_msg">这里没有找到你倾心的…\n建议您重新选择区域~</string>
    <string name="network_error">哎呀，网络开小差了~</string>
    <string name="main_park_marker_recommend">为您推荐</string>
    <string name="main_page_park_choose">选择</string>
    <string name="other_plate_qd">每日签到</string>
    <string name="near_page_search_tip">寻找身边的乐趣</string>
    <string name="main">主页面</string>
    <string name="main_park_count">附近 %1$d 个停车场</string>
    <string name="main_park_num">剩余车位：%s</string>
    <string name="main_park_price">参考收费(/小时)：\n￥%s</string>
    <string name="system_dialog_tip">系统提示</string>
    <string name="modal_dialog_tip">温馨提示</string>
    <string name="modal_dialog_permission_msg">为了您获得更好的体验，\n请授予位置权限~</string>
    <string name="app_cancel">取 消</string>
    <string name="app_confirm">确 定</string>
    <string name="my_background">背景图</string>
    <string name="notice_cd">通知</string>
    <string name="modal_nav_tip">为了衔接您的日常使用习惯，\n易派克为您提供第三方导航方案~</string>
    <string name="pay_sure_btn">确认支付 ￥%s</string>
    <string name="pay_safe_orderid">订单编号：%s</string>
    <string name="default_user_name">登录 / 注册</string>
    <string name="my_services">我的服务</string>
    <string name="daily_attendance">每日签到</string>
    <string name="parking_record">停车记录</string>
    <string name="vehicle_management">车辆管理</string>
    <string name="my_wallet">我的钱包</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_setting">设置</string>
    <string name="unknow_error">大侠饶命，母星开小差了~</string>
    <string name="hint_phone_tip">请输入手机号</string>
    <string name="hint_pwd_tip">请输入密码</string>
    <string name="hint_code_tip">验证码</string>
    <string name="send_sms">发送验证码</string>
    <string name="countdown_send_sms">%d 秒后重试</string>
    <string name="sms_login_tip">未注册的手机号码验证后将自动注册账号</string>
    <string name="set_password_rule_tip">密码需包含其中两项：大写英文、小写英文、数字、字符</string>
    <string name="phone_number">手机号</string>
    <string name="update_pwd">修改密码</string>
    <string name="update_version">版本更新</string>
    <string name="clear_cache">清除缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="feedback_submit">提交反馈</string>
    <string name="feedback_question">问题和意见</string>
    <string name="feedback_question_hint">简要描述您要反馈的问题和意见</string>
    <string name="feedback_question_pic">图片（选填，提供问题截图）</string>
    <string name="feedback_question_contact">联系方式（选填）</string>
    <string name="feedback_contact">联系方式</string>
    <string name="set_user_info">个人资料</string>
    <string name="set_user_nickname">设置昵称</string>
    <string name="change_other_user">切换账号</string>
    <string name="login_out">退出登录</string>
    <string name="current_version">当前版本：%s</string>
    <string name="no_update_info">未获取到App版本信息</string>
    <string name="find_new_version">发现新版本</string>
    <string name="update_later">稍候更新</string>
    <string name="update_now">立即更新</string>
    <string name="view_now"><![CDATA[立即查看 >>]]></string>

</resources>
