<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/base_dialog_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:paddingTop="10dp"
        android:text="Title"
        android:textColor="@color/g333333"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:minHeight="80dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/app_name"
        android:textColor="@color/g333333"
        android:textSize="17sp" />


    <View
        android:id="@+id/h_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_e1e1e1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_button_cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/com_btn_confirm_selector_left"
            android:text="@string/app_cancel"
            android:textColor="@color/color_def_cancel"
            android:textSize="16sp" />

        <View
            android:id="@+id/vertical_line"
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/color_e1e1e1" />

        <Button
            android:id="@+id/dialog_button_confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/com_btn_confirm_selector_right"
            android:text="@string/app_confirm"
            android:textColor="@color/colorParkBlue"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>