<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <include layout="@layout/layout_base_title"
        android:id="@+id/title_layout"/>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="afterDescendants"
            android:clipChildren="false">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                android:textSize="15sp"
                android:textColor="@color/g333333"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/feedback_question" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                android:background="@color/gececec" />

            <cn.epark.view.ScrollEditText
                android:id="@+id/et_question"
                style="@style/EditText_input"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="@string/feedback_question_hint"
                android:paddingStart="18dp"
                android:paddingTop="15dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line1"
                android:paddingEnd="20dp" />

            <TextView
                android:id="@+id/tv_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                android:textColor="@color/g333333"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_question"
                android:text="@string/feedback_question_pic" />

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title2"
                android:background="@color/gececec" />

            <TextView
                android:id="@+id/tv_title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                android:textColor="@color/g333333"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_img"
                android:text="@string/feedback_question_contact" />

            <View
                android:id="@id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title3"
                android:background="@color/gececec" />

            <EditText
                android:id="@+id/et_contact"
                style="@style/EditText_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/feedback_contact"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:paddingBottom="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line3"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rv_img"
                android:background="@color/gececec" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="16dp"
                android:clipChildren="false"
                android:layout_marginTop="6dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line2"
                android:overScrollMode="never"/>

            <TextView
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="35dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/selector_base_btn_bg"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_contact"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/feedback_submit"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>