<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cEDF1F5"
    android:orientation="vertical">

    <include layout="@layout/layout_base_title"
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/select_item_gray"
        android:descendantFocusability="blocksDescendants">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:text="@string/phone_number"
            android:textColor="@color/c666666"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/phone_num_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="23dp"
            android:text=""
            android:textColor="@color/c222222"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/update_pwd_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/select_item_gray"
        android:descendantFocusability="blocksDescendants">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:text="@string/update_pwd"
            android:textColor="@color/c666666"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/more_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/check_version_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/select_item_gray"
        android:descendantFocusability="blocksDescendants">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_version"
                android:textColor="@color/c666666"
                android:textSize="15sp" />

            <ImageView
                android:visibility="gone"
                android:id="@+id/version_red_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:src="@drawable/notice_red_background" />

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/more_icon" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/clear_cache_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/select_item_gray"
        android:descendantFocusability="blocksDescendants">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:text="@string/clear_cache"
            android:textColor="@color/c666666"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clear_cache_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text=""
                android:textSize="15sp"
                android:textColor="@color/c222222"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/more_icon" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/feedback_rl"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="0.5dp"
        android:background="@drawable/select_item_gray"
        android:descendantFocusability="blocksDescendants">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:text="@string/feedback"
            android:textColor="@color/c666666"
            android:textSize="15sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@mipmap/more_icon" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/change_user_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="@drawable/selector_base_btn_bg"
            android:gravity="center"
            android:text="@string/change_other_user"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/login_out_btn_tv"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/login_out_btn_tv"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/selector_base_btn_bg"
            android:gravity="center"
            android:text="@string/login_out"
            android:textColor="@color/colorWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_user_btn_tv"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/app_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text=""
            android:textColor="@color/c666666"
            android:textSize="15sp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>